experimental global sbt buildfile